--- a/index.html
+++ b/index.html
@@ -68,11 +68,9 @@
 
             <hr class="hidden-sm-down">
 
-            <a class="nav-menu-toggle" href="#nav-menu" data-toggle="collapse" data-target="#nav-menu" aria-expanded="false" aria-controls="nav-menu">
-              Menu
-            </a>
+            
 
-            <nav id="nav-menu" class="collapse nav-menu">
+            <nav id="nav-menu" class="collapse nav-menu show">
               <ul class="nav nav-first flex-column">
                 
                   <li class="nav-item">
@@ -166,6 +164,20 @@
     </div>
   </div>
 
+
+
+    <!-- jQuery -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Contact Form JavaScript -->
+    <script src="js/jqBootstrapValidation.js"></script>
+    <script src="js/contact_me.js"></script>
+
+    <!-- Theme JavaScript -->
+    <script src="js/clean-blog.min.js"></script>
 
 </body>
 
